  ``__init__`` methods.

* Added ``alt`` option to ``graphviz`` extension directives.

* Added Epub builder.

* #309: The ``graphviz`` extension can now output SVG instead of PNG
  images, controlled by the ``graphviz_output_format`` config value.

* #284: All docinfo metadata is now put into the document metadata, not
  just the author.

* Added new HTML theme ``agogo``, created by Andi Albrecht.

* The ``toctree()`` callable in templates now has a ``maxdepth``
  keyword argument to control the depth of the generated tree.

* Added new minimal theme called scrolls, created by Armin Ronacher.

* Added Catalan translation, thanks to Pau Fernández.

* Added ``html_output_encoding`` config value.

* #200: Added ``Sphinx.add_stylesheet()``.

* Added ``titlesonly`` option to ``toctree`` directive.

* Removed the deprecated ``sphinx.builder`` module.

* #193: Added a ``visitedlinkcolor`` theme option to the default
  theme.

* Added the ``prepend`` and ``append`` options to the
  ``literalinclude`` directive.

* Added the ``latex_docclass`` config value and made the "twoside"
  documentclass option overridable by "oneside".

* Added the ``trim_doctest_flags`` config value, which is true by default.

* Added the ``extlinks`` extension.

* Allow searching for object names including the module name, like
  ``sys.argv``.

* Many improvements and fixes to the ``autosummary`` extension,
  thanks to Pauli Virtanen.

* Added ``html_show_copyright`` config value.

* Added simplified Chinese locale.

* Added ``latexpdf`` target in quickstart Makefile.

* Added ``htmltitle`` block in layout template.


Release 0.6.4 (in development)
==============================

* #302: Fix links generated by the ``:doc:`` role for LaTeX output.

* #286: collect todo nodes after the whole document has been read;
  this allows placing substitution references in todo items.

* #294: do not ignore an explicit ``today`` config value in a
  LaTeX build.
