@@ -23,12 +23,14 @@ Release 1.0 (in development)
 * #284: All docinfo metadata is now put into the document metadata, not
   just the author.
 
+* Added new HTML theme ``nature``.
+
 * Added new HTML theme ``agogo``, created by Andi Albrecht.
+
+* Added new HTML theme called scrolls, created by Armin Ronacher.
 
 * The ``toctree()`` callable in templates now has a ``maxdepth``
   keyword argument to control the depth of the generated tree.
-
-* Added new minimal theme called scrolls, created by Armin Ronacher.
 
 * Added Catalan translation, thanks to Pau Fernández.
 
@@ -70,6 +72,10 @@ Release 1.0 (in development)
 
 Release 0.6.4 (in development)
 ==============================
+
+* Restore compatibility with Pygments >= 1.2.
+
+* #295: Fix escaping of hyperref targets in LaTeX output.
 
 * #302: Fix links generated by the ``:doc:`` role for LaTeX output.
 
